--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.83.0"
+    "mongodb": "^3.1.1",
+    "request": "^2.87.0"
   }
 }
